--- a/src/scss/ui/_index.scss
+++ b/src/scss/ui/_index.scss
@@ -1,1 +1,10 @@
 @forward 'header';
+@forward 'creapodcast';
+@forward 'beneficios';
+@forward 'estadistica';
+@forward 'planes';
+
+
+
+@forward 'botones';
+
