--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -55,4 +55,24 @@
     background-image: linear-gradient( $colorDegradado 0%, $colorDegradado 100%), url($url);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top center;
+}
+
+@mixin headingBorderBottom($colorTexto, $colorLinea){
+    font-size: 3.6rem;
+    display: inline-block;
+    margin-top: 5rem;
+    color: $colorTexto;
+
+    @include tablet {
+        margin-top: 0;
+    }
+    &::after{
+        content: '';
+        background-color: $colorLinea;
+        height: 1rem;
+        width: calc(100% + 1rem);
+        display: block;
+        margin: -1.4rem 0 0 0;
+    }
 }
