--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -58,6 +58,13 @@
     background-position: top center;
 }
 
+@mixin iconBg($url){
+    background-image: url($url);
+    background-repeat: no-repeat;
+    background-position: 50% 2rem;
+    background-size: 10rem;
+}
+
 @mixin headingBorderBottom($colorTexto, $colorLinea){
     font-size: 3.6rem;
     display: inline-block;
