--- a/src/scss/ui/_planes.scss
+++ b/src/scss/ui/_planes.scss
@@ -19,19 +19,60 @@
 
     @include m.tablet {
         flex-direction: row;
+        max-width: 85rem;
+        margin: 10rem auto 0 auto;
     }
 
     .plan{
+        flex-grow: 1;
+        background-color: v.$blanco;
+        padding: 16rem 4rem;
+        border-bottom: 1px solid #e1e1e1;
+        @include m.tablet {
+            border: unset;
+            transition: transform .33s;
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+        .precio{
+            font-size: 1.8rem;
+            text-align: center;
+            font-weight: 700; 
+            text-transform: uppercase;
+        }
+        .listado{
+            li{
+                text-align: center;
+                margin-bottom: 2rem;
 
+                &:last-of-type{
+                    margin-bottom: 0;
+                }
+            }
+        }
+        &.inicio{
+            @include m.iconBg('../img/icono_inicio.svg');
+        }
 
         &.negocio{
             order: -1;
+            background-color: v.$primario;
+            padding-top: calc(16rem + 5rem);
+
+            @include m.iconBg('../img/icono_negocio.svg');
             @include m.tablet {
                 order: unset;
+                margin-top: -5rem;
+                margin-bottom: -5rem;
+                border-radius: 2rem;
+                background-position: 50% 7rem;
+                z-index: 100;
             }
         }
         &.pro{
             order: -1;
+            @include m.iconBg('../img/icono_pro.svg');
             @include m.tablet {
                 order: unset;
             }
